Filter-box does no longer overlap fix for 1700

--- a/less/content/filter.less
+++ b/less/content/filter.less
@@ -6,11 +6,11 @@
   box-shadow: @tax-legacy-filter-box-shadow;
 }
 
-legend.ilTableFilter > .ilTableFilterDeactivator {
-  margin-right: @tax-legacy-deactivator-margin-right;
-  margin-top: @tax-legacy-deactivator-margin-top;
-}
 
 div.ilTableFilterLabel{
   background-color: transparent;
+}
+
+legend.ilTableFilter{
+  margin: 12px 0  0;
 }
